Fix contract
